--- a/css/base.css
+++ b/css/base.css
@@ -79,7 +79,7 @@ ul {
 /* --- 3. Các kiểu nút chung (Common Button Styles) --- */
 .btn {
     display: inline-block;
-    padding: 0; /* Padding will be handled by .btn-primary */
+    padding: 10px 0 10px; /* Padding will be handled by .btn-primary */
     border-radius: 8px; /* Tăng nhẹ độ bo góc cho các nút chung */
     font-weight: 600;
     text-align: center;
